# rdfantic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  design.md  fastapi.md  getting-started.md  shacl.md  testing.md
examples/: basic_read_write.ipynb  basic_read_write.py  llm_bridge.ipynb  llm_bridge.py  multi_view.ipynb  multi_view.py  pagination.ipynb  pagination.py  shacl_validation.ipynb  shacl_validation.py  update_delete.ipynb  update_delete.py
src/rdfantic/: __init__.py  constraints.py  exceptions.py  fields.py  model.py  namespace.py  pagination.py  shacl.py  sparql.py  types.py
tests/: conftest.py  test_benchmark.py  test_boolean_coercion.py  test_circular.py  test_deep_nesting.py  test_depth.py  test_endpoint.py  test_endpoint_edge.py  test_errors.py  test_forward_refs.py  test_inheritance.py  test_json_round_trip.py  test_language_tags.py  test_llm_bridge.py  test_merge_nested.py  test_model.py  test_multi_view.py  test_nested_sparql.py  test_pagination.py  test_pagination_mixed.py  test_round_trip.py  test_scalar_ambiguity.py  test_shacl.py  test_shacl_integration.py  test_shacl_recursion.py  test_sparql.py  test_sparql_injection.py  test_special_values.py  test_union_types.py  test_update.py  test_uriref_fields.py  test_xsd_mappings.py
