[project]
name = "rdfantic"
dynamic = ["version"]
description = "Pydantic views for RDF graphs — read, write, validate, and query graph data with typed Python models"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Milad Olad", email = "milad.olad@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["rdf", "pydantic", "knowledge-graph", "shacl", "linked-data", "semantic-web"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "rdflib>=7.0",
]

[project.optional-dependencies]
shacl = ["pyshacl>=0.26"]

[project.urls]
Repository = "https://github.com/milad-o/rdfantic"
Issues = "https://github.com/milad-o/rdfantic/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/rdfantic/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rdfantic"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
    "pyshacl>=0.26",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "ipykernel>=7.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
